--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+	<h1>Bali</h1>
+	<br>
+	<p>lorem ipsum ada asda asdaffb dzv teg</p>
+	<ol>
+		<li>fsdf <strong>gh</strong> we</li>
+		<li>fsdf <em> ad</em>gh we</li>
+		<li>fsdf gh <em> ad</em>we</li>
+		<li>fsdf gh<em> ad</em> we</li>
+		<li>fsdf gh <em> ad</em>we</li>
+	</ol>
+	<ul>
+		<li>sdfghjk <em> ad</em>cvbn rty</li>
+		<li>sdfghjk <em> ad</em>cvbn rty</li>
+		<li>sdfghjk <em> ad</em>cvbn rty</li>
+		<li>sdfghjk <em> ad</em>cvbn rty</li>
+		<li>sdfghjk <em> ad</em>cvbn rty</li>
+	</ul>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
