--- a/main.html
+++ b/main.html
@@ -12,14 +12,14 @@
 	<p>lorem ipsum ada asda asdaffb dzv teg</p>
 	<ol>
 		<li>fsdf <strong>gh</strong> we</li>
-		<li>fsdf <em> ad</em>gh we</li>
-		<li>fsdf gh <em> ad</em>we</li>
+		<li>fsdf <b> ad</b>gh we</li>
+		<li>fsdf gh <i> ad</i>we</li>
 		<li>fsdf gh<em> ad</em> we</li>
 		<li>fsdf gh <em> ad</em>we</li>
 	</ol>
 	<ul>
-		<li>sdfghjk <em> ad</em>cvbn rty</li>
-		<li>sdfghjk <em> ad</em>cvbn rty</li>
+		<li>sdfghjk <b> ad</b>cvbn rty</li>
+		<li>sdfghjk <i> ad</i>cvbn rty</li>
 		<li>sdfghjk <em> ad</em>cvbn rty</li>
 		<li>sdfghjk <em> ad</em>cvbn rty</li>
 		<li>sdfghjk <em> ad</em>cvbn rty</li>
